--- a/css/style.css
+++ b/css/style.css
@@ -146,11 +146,12 @@ body{
 
 
 .intro-text{
-    color: rgb(39, 39, 39);
-    font-size: 1.5rem;
+    color: rgb(24, 23, 23);
+    font-size: 1.6rem;
     text-align: center;
     padding-top: 50px;
     padding-bottom: 50px;
+   
 }
 
 .single-services{
@@ -161,10 +162,11 @@ body{
 .single-services p{
     padding: 0px 26px;
     font-size: 1.5rem;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .form-container{
-   background-color:rgb(66 66 66);
+   background-color:  rgb(53 51 51);
    text-align: center;
    padding: 20px;
 }
@@ -178,8 +180,8 @@ form{
 }
 
 form input {
-    padding: 1.4em 1em 1.2em ;
-    border-radius: 7px;
+    padding: 1.1em 1em 1.1em ;
+    border-radius: 120px;
     color:rgb(34, 33, 33);
     background-color: rgb(252, 252, 252);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -210,14 +212,19 @@ input[type=number] {
     border: solid 1px rgb(233, 153, 4);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     width: 80%;
+    margin-top: 10px;
     outline: none;
     font-size: 1.3rem;
+    padding-left:10px;
+    padding-top: 10px;
+    border-radius: 10px;
  
 }
 #input_1_8{
     padding: 6px 9px 6px 7px;
     cursor: pointer;
     transition: 0.5s ease-in;
+   
     
 
 }
@@ -319,6 +326,7 @@ input[type=number] {
         .services{
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
+            margin-bottom: 80px;
         } 
     }
 
